# site

./: .firebaserc  .gitignore  README.org  astro.config.mjs  bun.lockb  package.json  tailwind.config.js
api/: .env.example  .gitignore  api.py  pyproject.toml  readme.org  run.sh
public/: CNAME
src/pages/: index.astro
srv/M-x-site/: guestbook.jsonl
