[tool.poetry]
name = "m-x-site-api"
version = "0.1.0"
description = ""
authors = ["july, paul"]
readme = "README.md"
# packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
aiofiles = "^23.2.1"
python-decouple = "^3.8"
pydantic = {extras = ["email"], version = "^2.6.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
